tests/snapshots/app_tests__change_directory_lists_correct_directory_entires.snap
---
source: tests/app_tests.rs
expression: terminal.backend()
snapshot_kind: text
---
"                                     Tiny FE                                    "
"|> /tmp/tiny_fe                                                                 "
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃>../                                                                          ┃"
"┃ sub_dir/  a                                                                  ┃"
"┃ file_1.txt                                                                   ┃"
"┃ file_2.txt                                                                   ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
" (d)irectory │ (f)recent                                                        "
"                                Press ? for help                                "
